Backported v1 from Java 11+ to Java 8+